--- a/I3PFrontEnd/css/style.css
+++ b/I3PFrontEnd/css/style.css
@@ -141,3 +141,90 @@ a:hover{
 .active{
     background-color: #a1887f !important;
 }
+.descques{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.descrvw{
+    height: 150px !important;
+    margin-bottom: 10px;
+    resize: none;
+}
+
+.loverating:not(old){
+    display:  inline-block;
+    width: 7.5em;
+    height: 1.5em;
+    overflow: hidden;
+    vertical-align: bottom;
+}
+.loverating:not(old) > input{
+  margin-right : -100%;
+  opacity      : 0;
+}
+.loverating:not(old) > label{
+  display         : block;
+  float           : right;
+  position        : relative;
+  background      : url('../img/favoriteoff.png');
+  background-size : contain;
+}
+.loverating:not(old) > label:before{
+  content         : '';
+  display         : block;
+  width           : 1.5em;
+  height          : 1.5em;
+  background      : url('../img/favorite.png');
+  background-size : contain;
+  opacity         : 0;
+  transition      : opacity 0.2s linear;
+}
+.loverating:not(old) > label:hover:before,
+.loverating:not(old) > label:hover ~ label:before,
+.loverating:not(:hover) > :checked ~ label:before{
+  opacity : 1;
+}
+.rvwbtn{
+    float: right;
+}
+.btnkirim{
+    text-align: right;
+    background-color: #795548;
+    color: white !important;
+}
+.btnbatal{
+    background-color: transparent;
+    margin-right: 20px;
+}
+.konfpemesanan{
+    float: right;
+    color: #8d6e63;
+    text-align: center;
+}
+.konfirmno, .konfirmyes{
+    text-align: right;
+    width: 38px;
+    margin-right: 3px;
+}
+.ntherapy{
+    font-size: 13pt;
+    margin-bottom: 3px;
+}
+.datepemesanan{
+    font-size: 8pt;
+    color: #8d6e63;
+    vertical-align: bottom;
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+}
+.statpemesanan{
+    font-size: 9pt;
+    color: #ff5722;
+}
+.sudahpesan, .batalpesan{
+    margin-top: -35px;
+    display: block;
+    margin-left: -55px;
+    width: 35px;
+}
