Add daftar pegawai page

--- a/I3PFrontEnd/css/style.css
+++ b/I3PFrontEnd/css/style.css
@@ -270,3 +270,8 @@ a:hover{
     border-top-width: 1px;
     margin-bottom: 20px;
 }
+.loginpegawai{
+    font-size: 9pt;
+    color: #ff5722;
+    margin-top:20px;
+}
