Added color style for error form validation.

--- a/I3P/public/css/style.css
+++ b/I3P/public/css/style.css
@@ -1,3 +1,9 @@
+/* ======== BY EC ======== */
+.error {
+    color: #CC0033;
+}
+/* ===== END OF BY EC ===== */
+
 body{
     margin:0;
     padding: 0;
