--- a/I3PFrontEnd/css/style.css
+++ b/I3PFrontEnd/css/style.css
@@ -200,12 +200,12 @@ a:hover{
     background-color: transparent;
     margin-right: 20px;
 }
-.konfpemesanan{
+.konfpemesanan, .konfkomplain{
     float: right;
     color: #8d6e63;
     text-align: center;
 }
-.konfirmno, .konfirmyes{
+.konfirmno, .konfirmwait, .konfirmyes{
     text-align: right;
     width: 38px;
     margin-right: 3px;
