Add profil saya frontend

--- a/I3PFrontEnd/css/style.css
+++ b/I3PFrontEnd/css/style.css
@@ -317,3 +317,35 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
 .headbooking{
 	margin-top:10px;
 }
+
+.genre{
+    height: 130px;
+}
+
+.detailprofilsaya{
+
+}
+
+.namalengkap{
+    font-variant-caps: all-petite-caps;
+    font-size: 20pt;
+}   
+
+.username{
+    font-size: 12pt;
+    color: #8d6e63;
+    margin-bottom: 5px;
+}
+
+.email{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.emailimg{
+    width: 20px;
+    margin-right: 10px;
+}
+.teleponimg{
+    width: 20px;
+    margin-right: 10px;
+}
